unpackaged/main/default/objects/Opportunity/fields/Allogran_Value__c.field-meta.xml
<CustomField>
    <fullName>Allogran_Value__c</fullName>
    <inlineHelpText>Value per month</inlineHelpText>
    <label>Allogran-R: Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>