unpackaged/main/default/objects/Opportunity/fields/Email_Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Email_Opportunity_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opportunity Detail</label>
    <type>Checkbox</type>
</CustomField>