unpackaged/main/default/objects/Opportunity/fields/Genex_Value__c.field-meta.xml
<CustomField>
    <fullName>Genex_Value__c</fullName>
    <inlineHelpText>Value per month</inlineHelpText>
    <label>Genex: Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>