unpackaged/main/default/objects/Opportunity/fields/Lost_reason_notes__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason_notes__c</fullName>
    <label>Lost reason notes</label>
    <type>TextArea</type>
</CustomField>