unpackaged/main/default/objects/Opportunity/fields/Opportunity_Title__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Title__c</fullName>
    <formula>IF ( Stimulan_Value__c &gt; 0,  Account.Account_Alias__c  &amp; &#39;/&#39; &amp;  Surgeon__r.LastName &amp; &#39;/Stimulan&#39;, 
IF ( Genex_Value__c &gt; 0, Account.Account_Alias__c &amp; &#39;/&#39; &amp;  Surgeon__r.LastName &amp; &#39;/Genex&#39;, 
IF ( Sports_Medicine_Value__c &gt; 0, Account.Account_Alias__c &amp; &#39;/&#39; &amp;  Surgeon__r.LastName &amp; &#39;/Sports&#39;, 
IF ( Allogran_Value__c &gt; 0, Account.Account_Alias__c &amp; &#39;/&#39; &amp;  Surgeon__r.LastName &amp; &#39;/Allogran&#39;, 
left(Account.Name,5) &amp; &#39;/&#39; &amp;  Account.Account_Alias__c &amp; &#39;/No Value&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Title</label>
    <type>Text</type>
</CustomField>