unpackaged/main/default/objects/Opportunity/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify referrer when lead source is Peer referral – opportunity will be recorded against the referrer’s record</inlineHelpText>
    <label>Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities Referred</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>