unpackaged/main/default/objects/Opportunity/fields/Sales_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Sales_Forecast__c</fullName>
    <inlineHelpText>Target annual spend</inlineHelpText>
    <label>Sales Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>