unpackaged/main/default/objects/Opportunity/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <formula>text(Surgeon__r.Specialty__c)</formula>
    <label>Specialty</label>
    <type>Text</type>
</CustomField>