unpackaged/main/default/objects/Opportunity/fields/Sports_Medicine_Value__c.field-meta.xml
<CustomField>
    <fullName>Sports_Medicine_Value__c</fullName>
    <inlineHelpText>Value per month</inlineHelpText>
    <label>Sports Medicine: Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>