unpackaged/main/default/objects/Opportunity/validationRules/Lost_Reason_is_mandatory_whenn_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_is_mandatory_whenn_lost</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval ( StageName , &quot;Closed Lost&quot;) &amp;&amp;
isblank(text(Lost_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Please fill in the Lost Reason as the Opportunity is lost.</errorMessage>
</ValidationRule>