unpackaged/main/default/objects/Opportunity/listViews/Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sales_Forecast__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Use,Closed Lost</value>
    </filters>
    <label>Open Opportunities</label>
</ListView>